--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* Color gradiente de fondo */
 body {
   background: rgb(81, 180, 58);
   background: linear-gradient(
@@ -5,5 +6,5 @@ body {
     rgba(81, 180, 58, 1) 0%,
     rgba(29, 253, 77, 1) 50%,
     rgba(252, 235, 69, 1) 100%
-  ); Gradiente de fondo
+  );
 }
